--- a/3.1_genomics_with_R.Rmd
+++ b/3.1_genomics_with_R.Rmd
@@ -69,7 +69,7 @@ base indicates this is a base R function, not part of any package
 base::mean(x)
 
 #calculate median
-base::median(x)
+stats::median(x)
 ```
 
 3.1.2 Describing the spread
