correct package install instructions

--- a/Explore_FireBrowseR_BRCA.Rmd
+++ b/Explore_FireBrowseR_BRCA.Rmd
@@ -26,10 +26,18 @@ if (!require("BiocManager", quietly = TRUE))
 
 BiocManager::install("Biobase")
 
-install.packages("librarian")
-librarian::shelf(devtools, mariodeng/FirebrowseR, ggplot2)
+devtools::install_github("mariodeng/FirebrowseR")
+
+install.packages("ggplot2")
 ```
 In the console you may be asked if you want to update packages, type 'a'
+
+go to the library and get the packages
+```{r}
+library(FirebrowseR)
+
+library(ggplot2)
+```
 
 Following the FirebrowsR example (from the website above)
 
