--- a/packages.Rmd
+++ b/packages.Rmd
@@ -18,8 +18,9 @@ if (!require("BiocManager", quietly = TRUE))
 
 BiocManager::install("Biobase")
 
-install.packages("librarian")
-librarian::shelf(devtools, mariodeng/FirebrowseR, ggplot2)
+devtools::install_github("mariodeng/FirebrowseR")
+
+install.packages("ggplot2")
 ```
 
 ## Package information:
